tests/cases/compiler-development/artifact/errors/diagnostic-borrow-aggregate-enum-payload.diagnostic
diagnostic error code=O0001 family=ownership message="borrow-carrying aggregate enum payloads are not supported yet; store the borrow outside the enum payload, got View" sources=1 labels=2 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/compiler-development/artifact/errors/diagnostic-borrow-aggregate-enum-payload.ari" display="tests/cases/compiler-development/artifact/errors/diagnostic-borrow-aggregate-enum-payload.ari" bytes=111
  Label index=0 role=primary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-borrow-aggregate-enum-payload.ari" line=7 column=12 end_line=7 end_column=16 byte_start=68 byte_end=72 message=""
  Snippet label=0 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-borrow-aggregate-enum-payload.ari:7:12\n   |\n 7 |   Borrowed(View),\n   |            ^^^^"
  Label index=1 role=secondary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-borrow-aggregate-enum-payload.ari" line=2 column=10 end_line=2 end_column=13 byte_start=23 byte_end=26 message="field 'value' carries borrow type ref i64"
  Snippet label=1 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-borrow-aggregate-enum-payload.ari:2:10\n   |\n 2 |   value: ref i64,\n   |          ^^^"
  Note index=0 location=none message="aggregate enum payload layout does not currently preserve borrow lifetime state through nested payload aggregates"
  Help index=0 location=none message="store the borrowed view beside the enum or pass it directly to the code that consumes the active case"
